PLSQL/Colours/conf.log
[15:40:17] I/launcher - Running 1 instances of WebDriver
[15:40:17] I/hosted - Using the selenium server at http://localhost:4444/wd/hub
null
[15:40:22] E/launcher - Error: D:\iTAP\Recorded_Scenarios\PLSQL\Colours\spec.js:135
}else{
^

SyntaxError: missing ) after argument list
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1032:15)
    at Module._compile (node:internal/modules/cjs/loader:1067:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1155:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at C:\Users\es00780451\AppData\Roaming\npm\node_modules\protractor\node_modules\jasmine\lib\jasmine.js:93:5
    at Array.forEach (<anonymous>)
[15:40:22] E/launcher - Process exited with error code 100
